--- a/src/pages/Carrito/Carrito.module.css
+++ b/src/pages/Carrito/Carrito.module.css
@@ -11,6 +11,21 @@
 
 }
 
+/* #botones button {
+  width: 100%;
+}
+
+.card-footer button {
+  width: 100%;
+}
+
+.card-footer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+} */
+
 .productos {
   flex: 2;
   background: #f8f8f8;
@@ -91,18 +106,23 @@ h2 {
 }
 
 .carrito-icon {
-  font-size: 1.5rem; /* Ajusta el tamaño si es necesario */
-  color: black; /* Hace que el ícono sea negro */
+  font-size: 1.5rem;
+  /* Ajusta el tamaño si es necesario */
+  color: black;
+  /* Hace que el ícono sea negro */
 }
 
 .carrito-text {
   font-size: 0.75rem;
   text-align: center;
   text-decoration: none;
-  opacity: 0; /* Oculta el texto */
-  transition: opacity 0.3s ease-in-out; /* Efecto suave */
+  opacity: 0;
+  /* Oculta el texto */
+  transition: opacity 0.3s ease-in-out;
+  /* Efecto suave */
 }
 
 .carrito-container:hover .carrito-text {
-  opacity: 1; /* Muestra el texto al pasar el mouse */
+  opacity: 1;
+  /* Muestra el texto al pasar el mouse */
 }
